target/classes/META-INF/fabric8/openshift/srvdocumento-deploymentconfig.yml
---
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  labels:
    app: "srvDocumento"
    provider: "fabric8"
    version: "0.0.1-SNAPSHOT"
    group: "co.com.invima.maestro"
  name: "srvdocumento"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: "srvDocumento"
    provider: "fabric8"
    group: "co.com.invima.maestro"
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: "Rolling"
  template:
    metadata:
      labels:
        rht.prod_ver: "7.8"
        rht.comp_ver: "0.0.1-SNAPSHOT"
        rht.prod_name: "Red_Hat_Integration"
        rht.comp: "srvDocumento"
        com.company: "Red_Hat"
        app: "srvDocumento"
        provider: "fabric8"
        version: "0.0.1-SNAPSHOT"
        group: "co.com.invima.maestro"
    spec:
      containers:
      - env:
        - name: "SPRING_APPLICATION_JSON"
          value: "{\"server\":{\"undertow\":{\"io-threads\":1, \"worker-threads\"\
            :2 }}}"
        - name: "JAVA_OPTIONS"
          value: "-Xms256m -Xmx512m"
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        image: "srvdocumento:latest"
        imagePullPolicy: "IfNotPresent"
        name: "spring-boot"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        - containerPort: 9779
          name: "prometheus"
          protocol: "TCP"
        - containerPort: 8778
          name: "jolokia"
          protocol: "TCP"
        resources:
          limits:
            cpu: "300m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        securityContext:
          privileged: false
  triggers:
  - type: "ConfigChange"
