target/classes/META-INF/fabric8/openshift/srvdocumento-service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: "srvDocumento"
    provider: "fabric8"
    version: "0.0.1-SNAPSHOT"
    group: "co.com.invima.maestro"
  name: "srvdocumento"
spec:
  ports:
  - name: "8080-tcp"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: "srvDocumento"
    provider: "fabric8"
    group: "co.com.invima.maestro"
