target/classes/META-INF/fabric8/openshift/srvdocumento-route.yml
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  labels:
    expose: "true"
    app: "srvDocumento"
    provider: "fabric8"
    version: "0.0.1-SNAPSHOT"
    group: "co.com.invima.maestro"
  name: "srvdocumento"
spec:
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: "srvdocumento"
